2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	Exporting of .po files: Do not lose non-ASCII characters.

	* glom/libglom/translations_po.cc: write_translations_to_po_file():
  Write the file manually instead of using gettext-po.h and its po_file_write(), 
  because that loses non-ASCII characters (see previous commit).
  make check now works.

2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	test_document_export_po: Test a special character.

	* tests/translations_po/test_document_export_po.cc:
	Demonstrate that the po file export currently drops non-ASCII characters.
  Apparently there is no way to tell po_file_write() to use UTF-8 encoding, 
  though that can be affected by code that uses the libgettext-po source code 
  itself, by setting output_format_po.requires_utf8.

2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	Add glom_import_po_all command-line utility.

	* glom/libglom/translations_po.cc: write_translations_to_po_file():
  Mark the document as modified so the changes will (or can be) saved.
	* Makefile_libglom.am:
	* glom/glom_import_po_all.cc: Add this command-line utility to read all 
	.po files in a directory back into the .glom file.
	
2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	Command-line utilities: Initialize gettext and the locale.

	* glom/glom_create_from_example.cc:
	* glom/glom_export_po.cc:
	* glom/glom_export_po_all.cc:
	* glom/glom_test_connection.cc: This should make the translations be used.

2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	glom_export_po_all: Actually export the translations.

	* glom/glom_export_po_all.cc: Use the available locale_id,
	instead of an unset variable that should not be used.

2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	export_po_all: Fix some typos.

	* glom/glom_export_po_all.cc: Fix some typos.

2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	test_document_load_translations: Test more fallbacks.
